--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-  "name": "gardenlawn/mediagallery",
-  "description": "MediaGallery",
-  "type": "magento2-module",
-  "version": "1.0.0",
-  "require": {
-    "php": ">=8.3.0",
-    "magento/product-community-edition": "^2.4.8",
-    "hyva-themes/magento2-theme-module": "^1.3.11"
-  },
-  "autoload": {
-    "files": [
-      "registration.php"
-    ],
-    "psr-4": {
-      "GardenLawn\\MediaGallery\\": ""
-    }
-  },
-  "authors": [
-    {
-      "name": "Rafał Piechota",
-      "email": "marcin.piechota@gardenlawn.pl"
-    }
-  ]
+    "name": "gardenlawn/mediagallery",
+    "description": "MediaGallery",
+    "type": "magento2-module",
+    "config": {
+        "sort-packages": true
+    },
+    "version": "1.0.0",
+    "require": {
+        "php": ">=8.3.0",
+        "magento/product-community-edition": "^2.4.8",
+        "hyva-themes/magento2-theme-module": "^1.3.11"
+    },
+    "autoload": {
+        "files": [
+            "registration.php"
+        ],
+        "psr-4": {
+            "GardenLawn\\MediaGallery\\": ""
+        }
+    },
+    "authors": [
+        {
+            "name": "Rafał Piechota",
+            "email": "marcin.piechota@gardenlawn.pl"
+        }
+    ]
 }
