--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "require": {
         "php": ">=8.3.0",
         "magento/product-community-edition": "^2.4.8",
-        "hyva-themes/magento2-theme-module": "^1.3.11"
+        "hyva-themes/magento2-theme-module": "^1.3.11",
+        "ext-fileinfo": "*"
     },
     "autoload": {
         "files": [
